--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -3,10 +3,16 @@
     display: flex;
     height: 74vh;
     justify-content: center;
+    flex-direction: column;
 }
 
 .form-label {
     width: 100%;
     display: flex;
     justify-content: left;
+}
+
+.error-message {
+    color: red;
+    margin-top: 15px;
 }
